--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,7 @@ http {
     set_real_ip_from 103.22.200.0/22;
     set_real_ip_from 103.31.4.0/22;
     set_real_ip_from 104.16.0.0/12;
+    set_real_ip_from 104.24.0.0/14;
     set_real_ip_from 108.162.192.0/18;
     set_real_ip_from 131.0.72.0/22;
     set_real_ip_from 141.101.64.0/18;
@@ -29,14 +30,14 @@ http {
         listen [::]:80 default backlog=16384;
 
         location /lib.min.js {
-            proxy_set_header X-Real-IP $realip_remote_addr;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Host $server_name;
             proxy_pass https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js;
         }
 
         location /lib.js {
-            proxy_set_header X-Real-IP $realip_remote_addr;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Host $server_name;
             proxy_pass https://cdn.mxpnl.com/libs/mixpanel-2-latest.js;
@@ -44,7 +45,7 @@ http {
 
         location /decide {
             proxy_set_header Host decide.mixpanel.com;
-            proxy_set_header X-Real-IP $realip_remote_addr;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Host $server_name;
             proxy_pass https://decide.mixpanel.com/decide;
@@ -52,7 +53,7 @@ http {
 
         location / {
             proxy_set_header Host api-eu.mixpanel.com;
-            proxy_set_header X-Real-IP $realip_remote_addr;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Host $server_name;
             proxy_pass https://api-eu.mixpanel.com/;
