--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,8 @@
 events {}
 http {  
+    set_real_ip_from 10.244.0.0/16;
+    real_ip_header X-Forwarded-For;
+    
     server {
         listen 80 default backlog=16384;
         listen [::]:80 default backlog=16384;
