--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,9 @@
 events {}
-http {  
+http {
+    log_format custom_log '$remote_addr - $remote_user [$time_local] "$request" '
+                          '$status $body_bytes_sent "$http_referer" '
+                          '"$http_user_agent" "$http_cf_connecting_api" "$http_true_client_ip" "$http_x_forwarded_for"';
+    
     set_real_ip_from 10.244.0.0/16;
 
     set_real_ip_from 103.21.244.0/22;
