--- a/nginx.conf
+++ b/nginx.conf
@@ -35,6 +35,8 @@ http {
         listen 80 default backlog=16384;
         listen [::]:80 default backlog=16384;
 
+        access_log /var/log/nginx/access.log custom_log;
+
         location /lib.min.js {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
