--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ events {}
 http {
     log_format custom_log '$remote_addr - $remote_user [$time_local] "$request" '
                           '$status $body_bytes_sent "$http_referer" '
-                          '"$http_user_agent" "$http_cf_connecting_api" "$http_true_client_ip" "$http_x_forwarded_for"';
+                          '"$http_user_agent" "$http_cf_connecting_ip" "$http_x_forwarded_for"';
     
     set_real_ip_from 10.244.0.0/16;
 
@@ -34,8 +34,6 @@ http {
     server {
         listen 80 default backlog=16384;
         listen [::]:80 default backlog=16384;
-
-        access_log /var/log/nginx/access.log custom_log;
 
         location /lib.min.js {
             proxy_set_header X-Real-IP $remote_addr;
