--- a/nginx.conf
+++ b/nginx.conf
@@ -34,6 +34,8 @@ http {
     server {
         listen 80 default backlog=16384;
         listen [::]:80 default backlog=16384;
+        
+        access_log /var/log/nginx/access.log custom_log;
 
         location /lib.min.js {
             proxy_set_header X-Real-IP $remote_addr;
